--- a/Child related transfers VFI Josh Attempt/01 Bargaining.ipynb
+++ b/Child related transfers VFI Josh Attempt/01 Bargaining.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,11 +140,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t=2, gender=2, C_tot=0.32752066, hours=0.5, assets=5, capital=0.9, kids=0\n",
+      "income=5470.871418526056, a_next=5639.810214802038, k_next=1.4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "model.value_of_choice_single(0.32752066, 0.5, 5, 0.9, 0,2,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.solve_single(t=7)"
+    "model.solve_single(t=6)"
    ]
   },
   {
