update new notebook etc

--- a/EGM julius/iEGM/02. LimitedCommmitmentModel.ipynb
+++ b/EGM julius/iEGM/02. LimitedCommmitmentModel.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +181,24 @@
     "# setup alternative model solution\n",
     "model = lcm.HouseholdModelClass(par=settings)\n",
     "model.link_to_cpp(force_compile=do_compile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.par.do_egm = True\n",
+    "model.par.interp_method = \"linear\"\n",
+    "model.par.precompute_intratemporal = False # Never use pre-computed values besides the interpolator for C\n",
+    "for interp_inverse in (False,True):\n",
+    "    model.par.interp_inverse = interp_inverse\n",
+    "    method = f'iegm, linear inverse' if interp_inverse else 'iegm, linear'\n",
+    "    for i_c,num_C in enumerate(C_num_grid):\n",
+    "        model.par.num_marg_u = num_C\n",
+    "\n",
+    "        model.allocate()"
    ]
   },
   {
