--- a/Josh from May 26/01 Bargaining.ipynb
+++ b/Josh from May 26/01 Bargaining.ipynb
@@ -103,18 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -139,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,10 +154,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/joshuaclyne/Library/Mobile Documents/com~apple~CloudDocs/2024/Dynamic programming/Dynamic-programming-term-paper-new/Josh from May 26/Bargaining.py:949: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  elif (max_Sw < 0.0) | (max_Sm < 0.0): # no value is consistent with marriage\n",
-      "/Users/joshuaclyne/Library/Mobile Documents/com~apple~CloudDocs/2024/Dynamic programming/Dynamic-programming-term-paper-new/Josh from May 26/Bargaining.py:950: RuntimeWarning: invalid value encountered in scalar multiply\n",
-      "  for iP in range(par.num_power):\n"
+      "/Users/joshuaclyne/Library/Mobile Documents/com~apple~CloudDocs/2024/Dynamic programming/Dynamic-programming-term-paper-new/Josh from May 26/Bargaining.py:943: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  \n",
+      "/Users/joshuaclyne/Library/Mobile Documents/com~apple~CloudDocs/2024/Dynamic programming/Dynamic-programming-term-paper-new/Josh from May 26/Bargaining.py:944: RuntimeWarning: invalid value encountered in scalar multiply\n",
+      "  if (Sm[iP]>=0) & (Sm[iP+1]<0):\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 2 is out of bounds for axis 6 with size 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model\u001b[38;5;241m.\u001b[39msolve()\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/com~apple~CloudDocs/2024/Dynamic programming/Dynamic-programming-term-paper-new/Josh from May 26/Bargaining.py:306\u001b[0m, in \u001b[0;36mHouseholdModelClass.solve\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    304\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mt: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mt\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    305\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msolve_single(t)\n\u001b[0;32m--> 306\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msolve_couple(t)\n\u001b[1;32m    308\u001b[0m \u001b[38;5;66;03m# total consumption\u001b[39;00m\n\u001b[1;32m    309\u001b[0m sol\u001b[38;5;241m.\u001b[39mC_tot_couple \u001b[38;5;241m=\u001b[39m sol\u001b[38;5;241m.\u001b[39mCw_priv_couple \u001b[38;5;241m+\u001b[39m sol\u001b[38;5;241m.\u001b[39mCm_priv_couple \u001b[38;5;241m+\u001b[39m sol\u001b[38;5;241m.\u001b[39mC_pub_couple\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/com~apple~CloudDocs/2024/Dynamic programming/Dynamic-programming-term-paper-new/Josh from May 26/Bargaining.py:475\u001b[0m, in \u001b[0;36mHouseholdModelClass.solve_couple\u001b[0;34m(self, t)\u001b[0m\n\u001b[1;32m    471\u001b[0m Sm \u001b[38;5;241m=\u001b[39m remain_Vm \u001b[38;5;241m-\u001b[39m sol\u001b[38;5;241m.\u001b[39mVm_single[idx_single_man]\n\u001b[1;32m    472\u001b[0m \u001b[38;5;66;03m#print(f\"Sw: {Sw}, Sm: {Sm}\")\u001b[39;00m\n\u001b[1;32m    473\u001b[0m \u001b[38;5;66;03m#print(f\"shape of Sw: {np.shape(Sw)}\")\u001b[39;00m\n\u001b[1;32m    474\u001b[0m \u001b[38;5;66;03m#print(f\"shape of Sm: {np.shape(Sm)}\")\u001b[39;00m\n\u001b[0;32m--> 475\u001b[0m check_participation_constraints(sol\u001b[38;5;241m.\u001b[39mpower_idx, sol\u001b[38;5;241m.\u001b[39mpower, Sw, Sm, idx_single_woman, idx_single_man, idx_couple, list_start_as_couple, list_remain_couple, list_trans_to_single, par)\n\u001b[1;32m    477\u001b[0m \u001b[38;5;66;03m# Save remain values\u001b[39;00m\n\u001b[1;32m    478\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m iP, power \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(par\u001b[38;5;241m.\u001b[39mgrid_power):  \u001b[38;5;66;03m# Loop over different power levels!\u001b[39;00m\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/com~apple~CloudDocs/2024/Dynamic programming/Dynamic-programming-term-paper-new/Josh from May 26/Bargaining.py:965\u001b[0m, in \u001b[0;36mcheck_participation_constraints\u001b[0;34m(power_idx, power, Sw, Sm, idx_single_woman, idx_single_man, idx_couple, list_couple, list_raw, list_single, par)\u001b[0m\n\u001b[1;32m    963\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \u001b[38;5;66;03m# divorce\u001b[39;00m\n\u001b[1;32m    964\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(list_couple):\n\u001b[0;32m--> 965\u001b[0m         list_couple[i][idx] \u001b[38;5;241m=\u001b[39m list_single[i][idx_single_woman]\n\u001b[1;32m    966\u001b[0m         list_couple[i][idx] \u001b[38;5;241m=\u001b[39m list_single[i][idx_single_man]\n\u001b[1;32m    968\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mall\u001b[39m(x \u001b[38;5;241m<\u001b[39m s \u001b[38;5;28;01mfor\u001b[39;00m x, s \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(idx, power_idx\u001b[38;5;241m.\u001b[39mshape)):\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 2 is out of bounds for axis 6 with size 2"
      ]
     }
    ],
